Envia correo en caso de postergacion del evento. Como el jp dijo de que si es postergacion, la pantalla de postergaciony y cancelacion seran la misma. Por lo que pienso que seria mejor juntarlas en una sola y que el model tenga un id para ver si es cancelacion o postergacion y cambiar el mensaje segun requiera en el correo al cliente

--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/PagarReserva.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/PagarReserva.cshtml
@@ -38,6 +38,7 @@
             <h3>Información de la tarjeta</h3><br />
             @using (Html.BeginForm("PagarReserva", "CuentaUsuario", FormMethod.Post, new { @id = "formPost" }))
             {
+                @Html.HiddenFor(c => c.idVenta)
                 <div class="row form-group">
                     @Html.LabelFor(c => c.Nombre, new { @class = "control-label col-md-3" })
                     <div class="col-md-4">
