--- a/WebApplication4/WebApplication4/Views/Evento/Busqueda.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Busqueda.cshtml
@@ -308,7 +308,7 @@
                                 @{
                                     var func = from obj in db.Funcion
                                                where (obj.codEvento == evento.codigo && obj.estado.Contains("ACTIVO"))
-                                               orderby obj.horaIni ascending
+                                               orderby obj.fecha ascending
                                                select obj;
 
                                     string fecha = "";
