--- a/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/_Layout.cshtml
@@ -108,7 +108,7 @@
                                     Reportes <span class="caret"></span>
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="repVentas.html">Ventas</a></li>
+                                    <li><a href="@Url.Action("ReporteVentas", "Ventas")">Ventas</a></li>
                                     <li><a href="reporte_eventos.html">Eventos</a></li>
                                     <li class="divider"></li>
                                     <li><a href="Reporte_Asignacion_de_Vendedores.html">Asignación de vendedores</a></li>
